# Chlang

./: .gitignore  Cargo.toml  README.md  codebook.toml  flake.nix  hej  index.html  move_images  rapport.aux  rapport.dvi  rapport.tex  rapport.toc  script.sh  shell.nix  test.chlang  test_game  test_game3  train.py
comparisons/: Compare_to_default_2  compare_trained  compare_trained_against_default
default_comparisons/: POSITIONAL3_MATERIAL3  POSITIONAL4_MATERIAL4
early_test_games/: 50_move_rule
src/: bench.rs  board.rs  cmove.rs  compile.rs  game.rs  lib.rs  main.rs  parse.rs  piece.rs  train.rs  tree_evaluator.rs
src/compare/: main.rs
src/compile/: main.rs
src/evaluators/: evaluator_0.rs  material_evaluator.rs  mod.rs  positional_evaluator.rs
src/train/: main.rs
src/web_page/: main.rs  main.rsJ3XiCX.bck
training_checkpoints/: faster_iter_train  training_5_min  training_starting_at_checkpoint
