[package]
name = "chlang"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
base64 = "0.22.1"
# backtrace-on-stack-overflow = "0.3.0"
pix-engine = {version = "0.8.0", optional = true }
rand = "0.8.5"
rustc-hash = "2.1.0"

[features]
gui = ["dep:pix-engine"]
compare = []
using_default = []
